Updated get course by id
